# workplacesim

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: settings.json
.claude-plugin/: marketplace.json
hook/: settings.snippet.json  workplacesim-hook.sh
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: workplacesim.md
plugin/hooks/: hooks.json  workplacesim-hook.sh
public/: index.html  main.js  picker.html
rpi/workplacesim/: Cargo.toml
rpi/workplacesim/deploy/: README.md  install.sh  workplacesim.service
rpi/workplacesim/proptest-regressions/render/: routing.txt
rpi/workplacesim/public/: config.html
rpi/workplacesim/src/: lib.rs  main.rs
rpi/workplacesim/src/config/: persist.rs
rpi/workplacesim/src/render/: classify.rs  desktop.rs  dirty.rs  fb.rs  fit.rs  fx_store.rs  geometry.rs  mod.rs  palette.rs  sim_store.rs  world.rs
rpi/workplacesim/src/render/scene/: furniture.rs  glyph.rs  mod.rs  rooms.rs  sim.rs  text.rs
rpi/workplacesim/src/server/: error.rs  mdns.rs  routes.rs
rpi/workplacesim/src/state/: agent.rs  clock.rs  events.rs  mod.rs
rpi/workplacesim/tests/: config_api.rs  golden.rs  http.rs  socket.rs
rpi/workplacesim/tests/golden/: README.md  fx-scene.raw  session-labels.raw  static-bg.raw  step6-bench.raw  step6-glyphs.raw  step6-ticker.raw  step6-whiteboard.raw  three-sims.raw
rust/workplacesim/: Cargo.toml  Cross.toml
rust/workplacesim/deploy/: README.md  install.sh  mkimage.sh  workplacesim.avahi-service  workplacesim.initd  workplacesim.service
rust/workplacesim/deploy/image-overlay/etc/: hostname  inittab
rust/workplacesim/deploy/image-overlay/etc/local.d/: workplacesim.start
rust/workplacesim/deploy/image-overlay/etc/network/: interfaces
rust/workplacesim/src/: lib.rs  main.rs
rust/workplacesim/src/config/: mod.rs
rust/workplacesim/src/render/: desktop.rs  dirty.rs  fb.rs  fx_store.rs  geometry.rs  mod.rs  palette.rs  routing.rs  sim_store.rs  world.rs
rust/workplacesim/src/render/scene/: effects.rs  furniture.rs  glyph.rs  mod.rs  rooms.rs  sim.rs  text.rs
rust/workplacesim/src/server/: mdns.rs  mod.rs  routes.rs  sse.rs  static_files.rs
rust/workplacesim/src/state/: agent.rs  classify.rs  events.rs  mod.rs  payloads.rs  pending.rs
rust/workplacesim/tests/: golden.rs  http.rs  socket.rs  sse.rs  static_files.rs
rust/workplacesim/tests/golden/: README.md  fx-scene.raw  static-bg.raw  step6-bench.raw  step6-glyphs.raw  step6-ticker.raw  step6-whiteboard.raw  three-sims.raw
scripts/: simulate.js
server/: index.js  state.js
