[package]
name = "workplacesim"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["fb"]
fb = []
desktop = []

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "test-util", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
