[package]
name = "workplacesim"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
ahash = "0.8"
parking_lot = "0.12"
minifb = { version = "0.27", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

# Linux-only: /dev/fb0 mmap + raw ioctls for framebuffer mode query and VT
# management. Kept out of the default graph so `cargo build` on macOS stays
# lean and doesn't try to compile Linux-specific syscall bindings.
[target.'cfg(target_os = "linux")'.dependencies]
memmap2 = "0.9"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "ioctl", "mman", "signal"] }

[features]
# No renderer by default: `cargo build` produces a server-only binary that
# works on any platform. Pick a renderer explicitly:
#   cargo run --features desktop --no-default-features   (macOS window)
#   cross build --target arm-unknown-linux-gnueabihf --features fb --no-default-features   (Pi)
default = []
fb = []
desktop = ["dep:minifb", "dep:image"]

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "test-util", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
proptest = "1"

# Limit the dump_bg binary to the desktop feature so the fb (Pi) build path
# doesn't drag in image/png.
[[bin]]
name = "dump_bg"
required-features = ["desktop"]

[[bin]]
name = "dump_sims"
required-features = ["desktop"]

[[bin]]
name = "dump_fx"
required-features = ["desktop"]
